[package]
name = "mirrormgr"
version = "0.8.0-alpha.0"
authors = ["eatradish <sakiiily@aosc.io>", "liushuyu <liushuyu@aosc.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
once_cell = "1.18"
indicatif = "0.17"
sha2 = "0.10"
os-release = "0.1"
indexmap = { version = "2.0", features = ["serde"] }
futures = "0.3"
rustix = { version = "0.38", features = ["process"] }
dashmap = { version = "5.5", optional = true }
oma-console = "0.5"
ureq = "2.8"
tokio = { version = "^1", features = ["rt-multi-thread", "rt", "time"], optional = true }
oma-refresh = { version = "0.6", optional = true }
oma-inquire = "0.1"

# i18n
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.7"
rust-embed = "^8"
unic-langid = "0.9"

[build-dependencies]
clap = "4.0"
clap_complete = "4.0"
os-release = "0.1"

[features]
aosc = ["oma-refresh-aosc"]
retro = ["oma-refresh-aosc"]
oma-refresh = ["dep:oma-refresh", "dep:tokio", "dep:dashmap"]
oma-refresh-aosc = ["dep:oma-refresh", "dep:tokio", "dep:dashmap", "oma-refresh/aosc"]
default = ["aosc"]
