[package]
name = "mirrormgr"
version = "0.8.0-beta.1"
authors = ["eatradish <sakiiily@aosc.io>", "liushuyu <liushuyu@aosc.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
once_cell = "1.18"
indicatif = "0.17"
sha2 = "0.10"
os-release = "0.1"
indexmap = { version = "2.0", features = ["serde"] }
futures = "0.3"
rustix = { version = "0.38", features = ["process"] }
dashmap = { version = "5.5", optional = true }
oma-console = { version = "0.9", features = ["print", "progress_bar_style"] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "^1", features = ["rt-multi-thread", "rt", "time"], optional = true }
oma-refresh = { version = "0.11", optional = true }
oma-inquire = "0.1"
hex = "0.4"
tabled = "0.14"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# i18n
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.7"
rust-embed = "^8"
unic-langid = "0.9"

[build-dependencies]
clap = "4.0"
clap_complete = "4.0"
os-release = "0.1"

[features]
aosc = ["oma-refresh-aosc"]
retro = ["oma-refresh-aosc"]
oma-refresh = ["dep:oma-refresh", "dep:tokio", "dep:dashmap"]
oma-refresh-aosc = ["dep:oma-refresh", "dep:tokio", "dep:dashmap", "oma-refresh/aosc"]
default = ["aosc"]
