[package]
name = "mirrormgr"
version = "0.10.2"
authors = ["eatradish <sakiiily@aosc.io>", "liushuyu <liushuyu@aosc.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
once_cell = "1.18"
indicatif = "0.17"
sha2 = "0.10"
os-release = "0.1"
indexmap = { version = "2.0", features = ["serde"] }
rustix = { version = "0.38", features = ["process"] }
dashmap = { version = "6.0", optional = true }
oma-console = { version = "0.11", features = ["print", "progress_bar_style"] }
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "^1", features = ["rt-multi-thread", "rt", "time"], optional = true }
oma-refresh = { version = "0.20", optional = true, default-features = false }
oma-topics = { version = "0.9", optional = true }
oma-utils = "0.8"
oma-inquire = "0.1"
hex = "0.4"
tabled = "0.15"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"
ctrlc = "3.4"

# i18n
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.8"
rust-embed = "^8"
unic-langid = "0.9"

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
os-release = "0.1"

[features]
aosc = ["oma-refresh-aosc"]
retro = ["oma-refresh-aosc"]
oma-refresh = ["dep:oma-refresh", "dep:tokio", "dep:dashmap"]
oma-refresh-aosc = ["dep:oma-refresh", "dep:tokio", "dep:dashmap", "oma-refresh/aosc", "dep:oma-topics"]
sequoia-openssl-backend = ["oma-refresh/sequoia-openssl-backend"]
sequoia-nettle-backend = ["oma-refresh/sequoia-nettle-backend"]
rustls = ["reqwest/rustls-tls", "oma-refresh/rustls", "oma-topics/rustls"]
openssl = ["reqwest/native-tls", "oma-refresh/native-tls", "oma-topics/native-tls"]
default = ["aosc", "sequoia-nettle-backend", "rustls"]
